example/SyntaxError/extra_tokens.ada
with Ada.Text_IO;
use Ada.Text_IO;
procedure Main is
begin
    put(value) extra_token;
end Main;
